2025-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* cleanup: Use /bin/sh not /bin/bash

2024-10-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-07-15  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Switch one URL from http to https

2024-06-26  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Remoeve old setup step

2024-05-22  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-03-11  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2022-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add GitHub repo to URL field

2021-01-10  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

	* configure: Change shebang to #!/bin/sh

2018-12-23  Dirk Eddelbuettel  <edd@debian.org>

 	* NAMESPACE: Add .registration=TRUE to useDynLib()

2018-11-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

2018-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/getconf.cpp: Do not run examples on Solaris
	* src/RcppExports.cpp: Updated
	* R/RcppExports.R: Idem
	* man/getAll.Rd: Idem
	* man/getConfig.Rd: Idem

2016-08-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.0.2

2016-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/getconf.cpp: Minor cleanup; use explicit Rcpp:: namespace

2016-07-29  Qiang Kou <qkou@umail.iu.edu>
